more math heavy algo and RL enhancements

--- a/rps_playground/templates/index.html
+++ b/rps_playground/templates/index.html
@@ -632,7 +632,7 @@
 
             <div class="spinner" id="trn-spinner">
                 <div class="spinner-ring"></div>
-                <div class="spinner-text">Running 190 matches...</div>
+                <div class="spinner-text">Running matches...</div>
             </div>
 
             <div class="result-panel" id="trn-result">
